[package]
name = "sensitivity"
version = "0.1.0"
edition = "2021"
authors = ["HasX <mi@hasx.dev>"]
description = "SENSITIVITY (MiAssistant reimplementation): ADB-over-USB sideload + Xiaomi ROM validator"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusb = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
block-padding = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
md-5 = "0.10"
hex = "0.4"
byteorder = "1.5"
time = "0.3"
log = "0.4"
env_logger = "0.11"
dirs-next = "2"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "miassistant"
path = "src/main.rs"
